--- a/index.html
+++ b/index.html
@@ -398,9 +398,7 @@
                 <a class="footer-address" href="">г. Киев, пр-т Леси Украинки,26</a>
               </li>
               <li class="footer-item">
-                <a class="contact-link mail-tel" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="contact-link mail-tel" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="footer-item">
                 <a class="contact-link mail-tel" href="tel:+380991111111">+38 099 111 11 11</a>
@@ -446,6 +444,10 @@
       </div>
     </footer>
 
+
+
+
+
     <!-- Modal form -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -454,6 +456,64 @@
             <use href="./images/icons/sprite.svg#close-icon"></use>
           </svg>
         </button>
+
+
+
+
+        <!-- Form -->
+        <strong class="modal-title">Оставьте свои данные, мы вам перезвоним</strong>
+
+        <form class="modal-form">
+          <label class="modal-label">
+            <span>Имя</span>
+            <input class="modal-input" type="text" name="user-name" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons/sprite.svg#icon-person"></use>
+            </svg>
+          </label>
+
+          <label class="modal-label">
+            <span>Телефон</span>
+            <input class="modal-input" type="tel" name="user-phone" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons/sprite.svg#icon-phone"></use>
+            </svg>
+          </label>
+
+          <label class="modal-label">
+            <span>Почта</span>
+            <input class="modal-input" type="email" name="user-email" />
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons/sprite.svg#email"></use>
+            </svg>
+          </label>
+
+          <label class="modal-label">
+            <span>Комментарий</span>
+            <textarea
+              class="modal-text-area"
+              name="user-message"
+              rows="5"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+
+          <div class="modal-agreement">
+          <label>
+            <input class="modal-input" type="checkbox" name="user-checkbox"/>
+            <span class="modal-checkbox">
+            <svg class="modal-icon" width="16" height="15">
+              <use href="./images/icons/sprite.svg#checkbox"></use>
+            </svg>
+          </span>
+        </label>
+        
+            <span>Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
+        </div>
+
+
+          <button class="button order modal-btn" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
 
