--- a/portfolio.html
+++ b/portfolio.html
@@ -279,9 +279,7 @@
                 <a class="footer-address" href="">г. Киев, пр-т Леси Украинки,26</a>
               </li>
               <li class="footer-item">
-                <a class="contact-link mail-tel" href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+                <a class="contact-link mail-tel" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="footer-item">
                 <a class="contact-link mail-tel" href="tel:+380991111111">+38 099 111 11 11</a>
@@ -323,6 +321,23 @@
               </a>
             </li>
           </ul>
+        </div>
+
+        <div class="subscribe">
+          <strong class="footer-strong subscribe-title">Подпишитесь на рассылку</strong>
+          <form class="subscribe-form">
+            <label>
+              <input class="subscribe-email" type="email" name="" placeholder="Email" />
+            </label>
+
+            <button class="button order subscribe-btn" type="submit">
+              Подписаться
+
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
