--- a/index.html
+++ b/index.html
@@ -445,11 +445,8 @@
         <div class="subscribe">
           <strong class="footer-strong subscribe-title">Подпишитесь на рассылку</strong>
           <form class="subscribe-form">
-            <label>
               <input class="subscribe-email" type="email" name="" placeholder="Email" />
-            </label>
-
-            <button class="button order subscribe-btn" type="submit">
+                      <button class="button order subscribe-btn" type="submit">
               Подписаться
 
               <svg class="subscribe-icon" width="24" height="24">
@@ -465,7 +462,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
-          <svg class="modal-close-icon" width="18" height="18">
+          <svg class="modal-close-icon" width="11" height="11">
             <use href="./images/icons/sprite.svg#close-icon"></use>
           </svg>
         </button>
@@ -509,30 +506,31 @@
           </label>
 
           <div class="modal-agreement">
-            <label>
+            <label class="modal-agreement-label">
               <input
                 class="checkbox visually-hidden"
                 type="checkbox"
                 name="user-checkbox"
                 id="user-checkbox"
-                tabindex="-1"
-              />
+                tabindex="-1"/>
+
               <span
                 class="modal-checkbox"
                 role="checkbox"
                 aria-labelledby="user-checkbox"
-                tabindex="0"
-              >
+                tabindex="0">
                 <svg class="modal-checkbox-icon" width="16" height="15">
                   <use href="./images/icons/sprite.svg#checkbox"></use>
                 </svg>
               </span>
+
+              <span class="modal-agreement-txt"> Соглашаюсь с рассылкой и принимаю&nbsp;
+                <a class="modal-agreement-link" href="">Условия договора</a></span>
+
             </label>
 
-            <span class="modal-agreement-txt"
-              >Соглашаюсь с рассылкой и принимаю&nbsp;
-              <a class="modal-agreement-link" href="">Условия договора</a></span
-            >
+            <!-- <span class="modal-agreement-txt"> Соглашаюсь с рассылкой и принимаю&nbsp;
+              <a class="modal-agreement-link" href="">Условия договора</a></span> -->
           </div>
           <button class="button order modal-btn" type="submit">Отправить</button>
         </form>
